# bce-qianfan-sdk

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  README.pypi.md  ci.yml  dotenv_config_sample.env  pyproject.toml  test.py
middlelayer/: README.md  pyproject.toml
middlelayer/agents/qianfan_agent/: qianfan_zero_shot_agent.py
middlelayer/langchain/agents/: __init__.py
middlelayer/langchain/agents/qianfan_agent/: __init__.py  baidu_qianfan_endpoint.py
python/: .coveragerc  Flask_BasicAuth-0.2.0-py3-none-any.whl  Makefile  MarkupSafe-2.1.5-cp311-cp311-macosx_10_9_universal2.whl  README.pypi.md  blinker-1.8.2-py3-none-any.whl  flask-3.0.3-py3-none-any.whl  pyproject.toml  roundrobin-0.0.4-py3-none-any.whl  sean_test.py  werkzeug-3.0.3-py3-none-any.whl
python/qianfan/: __init__.py  config.py  consts.py  errors.py  fake_pyarrow_replacer.py  sean.py  version.py
python/qianfan/autotuner/: __init__.py  context.py  launcher.py  space.py  tune.py  utils.py
python/qianfan/autotuner/runner/: __init__.py  base.py  infer_runner.py  qianfan_runner.py
python/qianfan/autotuner/suggestor/: __init__.py  base.py  random_suggestor.py
python/qianfan/client/: __init__.py  client.py
python/qianfan/common/: __init__.py
python/qianfan/common/cli/: api.py  chat.py  completion.py  dataset.py  embedding.py  evaluation.py  main.py  model.py  openai_adapter.py  plugin.py  trainer.py  txt2img.py  utils.py
python/qianfan/common/client/: chat.py  completion.py  dataset.py  embedding.py  evaluation.py  main.py  openai_adapter.py  plugin.py  proxy.py  trainer.py  txt2img.py  utils.py
python/qianfan/common/persister/: base.py  persist.py
python/qianfan/common/prompt/: prompt.py  template.py
python/qianfan/common/runnable/: base.py
python/qianfan/common/tool/: baidu_search_tool.py  base_tool.py  duckduckgo_search_tool.py  wikipedia_tool.py
python/qianfan/dataset/: __init__.py  consts.py  data_source.py  dataset.py  dataset_utils.py  process_interface.py  qianfan_data_operators.py  schema.py  streamlit_script.py  summarization_method.py  table.py  table_utils.py
python/qianfan/dataset/data_insight/: data_insight_utils.py  insight.py  summarization_method.py
python/qianfan/dataset/data_insight/assets/: index.html
python/qianfan/dataset/data_source/: __init__.py  afs.py  baidu_qianfan.py  base.py  bos.py  chunk_reader.py  file.py  utils.py
python/qianfan/dataset/local_data_operators/: __init__.py  base.py  check_flagged_words.py  check_sentence_length_filter.py  check_special_characters.py  check_stopwords.py  word_list.py
python/qianfan/dataset/stress_test/: load_runner.py  load_statistics.py  qianfan_brief.py  qianfan_llm_load.py
python/qianfan/dataset/stress_test/yame/: __init__.py  distributor.py  logger.py  main.py  parser.py  runner.py  utils.py
python/qianfan/evaluation/: consts.py  evaluation_manager.py  evaluation_result.py  evaluator.py  local_evaluator.py  opencompass_evaluator.py
python/qianfan/extensions/: README.md
python/qianfan/extensions/flaml/autotuner/: __init__.py  suggestor.py  tune.py
python/qianfan/extensions/guidance/: __init__.py  _qianfan.py
python/qianfan/extensions/instructor/: patch.py
python/qianfan/extensions/langchain/: __init__.py
python/qianfan/extensions/openai/: adapter.py
python/qianfan/extensions/proxy/: proxy.py
python/qianfan/model/: __init__.py  configs.py  model.py
python/qianfan/resources/: __init__.py  http_client.py  rate_limiter.py  token_limiter.py  typing.py  typing_client.py
python/qianfan/resources/auth/: oauth.py
python/qianfan/resources/batch_chat/: __init__.py  chat.py  completions.py
python/qianfan/resources/batch_inference/: __init__.py
python/qianfan/resources/batch_online/: __init__.py  _helper.py  batch.py
python/qianfan/resources/console/: charge.py  consts.py  data.py  eval.py  finetune.py  iam.py  memory.py  model.py  prompt.py  rpm_tpm.py  service.py  utils.py
python/qianfan/resources/images/: image2text.py  text2image.py
python/qianfan/resources/llm/: base.py  chat_completion.py  completion.py  embedding.py  function.py  functions.py  plugin.py  rerank.py
python/qianfan/resources/rate_limiter/: __init__.py  base_rate_limiter.py  check_rate_limiter.lua  pulse.lua  rate_limiter.py  redis_rate_limiter.py  reset_rate_limiter.lua
python/qianfan/resources/requestor/: base.py  console_requestor.py  openapi_requestor.py
python/qianfan/resources/tools/: tokenizer.py  utils.py
python/qianfan/tests/: auth_test.py  batch_online_test.py  chat_completion_test.py  chat_completion_v2_test.py  client_test.py  completion_test.py  conftest.py  data_api_test.py  embedding_test.py  finetune_test.py  image2text_test.py  latency_test.py  locustfile.py  model_test.py  plugin_test.py  prompt_class_test.py  prompt_resource_test.py  rate_limiter_test.py  reranker_test.py  retry_test.py  rpm_and_tpm_test.py  service_test.py  text2image_test.py  token_limiter_test.py  tokenizer_test.py  tool_test.py  trainer_test.py
python/qianfan/tests/dataset/: data_source_test.py  data_stress.py  data_stress_test.py  dataset_test.py  table_test.py
python/qianfan/tests/langchain/: agent_test.py
python/qianfan/tests/utils/: __init__.py  consts.py  mock_server.py  mock_supported_model_list.py  utils.py
python/qianfan/trainer/: __init__.py  actions.py  base.py  configs.py  consts.py  dpo.py  finetune.py  pipeline.py  post_pretrain.py  ppl.yaml  trainer.py
python/qianfan/utils/: __init__.py  bos_uploader.py  logging.py  utils.py
python/qianfan/utils/cache/: __init__.py  base.py
python/qianfan/utils/fake_pyarrow/: __init__.py  compute.py  functions.py  ipc.py  lib.py  table.py
python/scripts/: build.sh  build_doc.sh  release_github.sh  release_note.sh  run_mock_server.sh  run_test.sh  run_test_ntbk.sh  test_proxy_server.sh
python/test_CI/: conftest.py  test_ntbk.py
python/test_CI/utils/: cookbook_execute.py  cookbook_operate.py  cookbook_process.py
python/tests/test_CI/: conftest.py  test_ntbk.py  test_spilt.py
python/tests/test_CI/utils/: process_cookbook.py
(+888 files in other folders)
