[tool.poetry]
name = "qianfan"
version = "0.2.4"
description = "文心千帆大模型平台 Python SDK"
authors = []
license = "Apache-2.0"
readme = "README.pypi.md"
exclude = [
    "src/qianfan/tests",
    "src/qianfan/docs",
]
homepage = "https://cloud.baidu.com/product/wenxinworkshop"
repository = "https://github.com/baidubce/bce-qianfan-sdk"
documentation = "https://qianfan.readthedocs.io/en/stable/README.html"
keywords = ["baidu", "qianfan"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = ">=2.24"
aiohttp = ">=3.7.0"
aiolimiter = ">=1.1.0"
importlib-metadata = { version = ">=1.4.0", python = "<=3.7" }
bce-python-sdk = ">=0.8.79"
typing-extensions = { version = ">=4.0.0", python = "<=3.10" }
pydantic = ">=2"
pydantic-settings = ">=2.0.3"
langchain = { version = ">=0.0.321", python = ">=3.8.1", optional = true }
numpy = [
    { version = "<1.22.0", python = ">=3.7 <3.8" },
    { version = ">=1.22.0", python = ">=3.8" }
]
pyarrow = [
    { version = ">=14.0.1", python = ">=3.8" },
    { version = "<=12.0.1", python = ">=3.7 <3.8" }
]
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
sphinx = ">=5"
pytest = ">=7.0.0"
flask = ">=2.0.0"
pytest-asyncio = ">=0.16.0"
coverage = ">=7.0.0"
black = "^23.1.0"
ruff = ">=0.0.290"
sphinx-rtd-theme = ">=1.2.0"
mypy = ">=1.4.0"
myst-parser = ">=0.19.2"

[tool.poetry.extras]
langchain = ["langchain"]
all = ["langchain"]

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
typing-modules = ["qianfan.resources.typing"]

[tool.black]
preview = true

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["qianfan/tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"